--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -197,3 +197,21 @@ body {
   border: 2px solid rgba(0, 0, 0, 0);
   /* creates padding around scroll thumb */
 }
+
+
+.mobile {
+  display: none;
+}
+
+@media(max-width: 600px) {
+  .main-content {
+    display: none;
+  }
+}
+
+
+@media(max-width:600px) {
+  .mobile {
+    display: flex;
+  }
+}
